# BS4AI-Project

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  Untitled1.ipynb  pyproject.toml  requirements.txt
config/: data_config.yaml  model_config.yaml
notebooks/: project_report.ipynb  project_report_executed.ipynb
results/: experiment_summary.json
results_Full experiment/: experiment_summary.json
scripts/: download_data.py  download_data.sh  eval_audio_by_attack.py  full_experiment.py  mitigate_fairface_frr.py  preprocess.py  run_experiment.py  run_fairness_eval.py
src/: __init__.py
src/data/: __init__.py  asvspoof_loader.py  audio_featurizer.py  deepfake_loader.py  fairface_loader.py  ff_c23_loader.py  sampling.py  video_audio.py
src/evaluation/: __init__.py  calibration.py  fairness_eval.py  fairness_mitigation.py  metrics.py
src/models/: __init__.py  audio_backbone.py  fusion.py  liveness_detector.py  visual_backbone.py
src/training/: train_audio.py  train_fusion.py  train_visual.py  trainer.py
src/utils/: __init__.py  torch_device.py
tests/: test_metrics.py
